<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:clipToPadding="false"
    android:padding="12dp"
    tools:context="org.schabi.newpipe.about.AboutActivity$AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_content_card"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <org.schabi.newpipe.views.NewPipeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.Large" />


        <org.schabi.newpipe.views.NewPipeTextView
            android:id="@+id/about_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            tools:text="0.9.9" />

        <org.schabi.newpipe.views.NewPipeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/app_description" />

        <org.schabi.newpipe.views.NewPipeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/faq_title"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_description" />

        <Button
            android:id="@+id/faq_link"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/faq" />

        <org.schabi.newpipe.views.NewPipeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/contribution_title"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contribution_encouragement" />

        <Button
            android:id="@+id/about_github_link"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/view_on_github" />

        <org.schabi.newpipe.views.NewPipeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/donation_title"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <org.schabi.newpipe.views.NewPipeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donation_encouragement" />

        <Button
            android:id="@+id/about_donation_link"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/give_back" />

        <org.schabi.newpipe.views.NewPipeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/website_title"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <org.schabi.newpipe.views.NewPipeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/website_encouragement" />

        <Button
            android:id="@+id/about_website_link"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/open_in_browser" />

        <org.schabi.newpipe.views.NewPipeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/privacy_policy_title"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <org.schabi.newpipe.views.NewPipeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_encouragement" />

        <Button
            android:id="@+id/about_privacy_policy_link"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/read_privacy_policy" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
