<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_history"
        android:orderInCategory="2"
        android:title="@string/action_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="4"
        android:title="@string/tab_about"
        app:showAsAction="never" />
</menu>
